[tool.poetry]
name = "dinosar"
version = "0.1.3"
description = "SAR processing on the Cloud"
authors = ["Scott Henderson <scotty@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scottyhq/dinosar"
repository = "https://github.com/scottyhq/dinosar"
keywords = ["SAR", "Cloud", "Batch", "AWS"]

# https://github.com/python-poetry/poetry/issues/927#issuecomment-538178615
# Can refactor CLI scripts later
#[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.6"
geopandas = "^0.6"
matplotlib = "^3.1"
pyyaml = "<5.3"
lxml = "^4.4"
#cartopy = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
sphinx = "^2.3"
sphinx_rtd_theme = "^0.4"
pytest-cov = "^2.8"
flake8 = "^3.7"
black = "^19.10b0"
awscli = "^1.17"
#dunamai = "^1" #currently failing

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
