[tool.poetry]
name = "dinosar"
version = "0.0.0"
description = "SAR processing on the Cloud"
authors = ["Scott Henderson <scotty@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scottyhq/dinosar"
repository = "https://github.com/scottyhq/dinosar"
keywords = ["SAR", "Cloud", "Batch", "AWS"]

[tool.poetry.scripts]
get_inventory_asf = 'cli.get_inventory_asf:main'
plot_inventory_as = 'cli.plot_inventory:main'
prep_topsApp_local = 'cli.prep_topsApp_local:main'

[tool.poetry.dependencies]
python = "^3.6"
geopandas = "^0.7"
shapely = "^1.6"
matplotlib = "^3.1"
pyyaml = "^5.2"
lxml = "^4.4"
requests = "^2.22"
# plotting/graphics libraries optional
cartopy = { version = "^0.17", optional = true }
# documentation libraries optional
sphinx = { version = "^2.3", optional = true }
sphinx_rtd_theme = { version = "^0.4", optional = true }
sphinxcontrib-apidoc = { version = "^0.3" , optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
flake8 = "^3.7"
black = "^19.10b0"
awscli = "^1.17"
pre-commit = "^1.10"
dunamai = "^1.0"

[tool.poetry.extras]
vis = ["cartopy"]
docs = ["sphinx","sphinx_rtd_theme","sphinxcontrib-apidoc"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
